# production-rag-lab

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
configs/: capstone.yaml  capstone_weak.yaml  golden_gate.yaml  naive.yaml  naive_claude.yaml
data/raw_samples/: cities.csv  eiffel.html  everest.md  everest_note.txt  rag.txt  rag_copy.txt
docs/: 00-overview.md  01-curriculum-map.md  02-roadmap.md  03-metrics-catalog.md  04-setup.md  05-scaling-report.md  06-capstone-report.md
docs/assets/: architecture.html
harness/: __init__.py  cache_report.py  config.py  contract.py  fusion.py  gate.py  ingest.py  latency_report.py  leaderboard.py  pipeline.py  registry.py  runner.py  scale_bench.py  scoring.py  sweep.py
harness/data/: __init__.py  datasets.py
harness/metrics/: __init__.py  answer.py  efficiency.py  retrieval.py
modules/: __init__.py
modules/baseline/: README.md  __init__.py  assemblers.py  chunkers.py  embedders.py  generators.py  indexes.py  retrievers.py
results/: capstone.json  capstone_weak.json  ingestion_report.json  latency_naive.json  latency_naive_claude.json  leaderboard.jsonl  leaderboard.md  naive.json  naive_claude.json  scaling_report.json  security_report.json  serving_cache_report.json
tests/: test_chunking.py  test_config_registry.py  test_embeddings.py  test_evaluation.py  test_indexing.py  test_ingestion.py  test_metrics_answer.py  test_metrics_retrieval.py  test_ops.py  test_pipeline_smoke.py  test_rerank_context_flows.py  test_retrieval_query.py  test_security.py  test_serving.py
(+63 files in other folders)
